fixed gap on the label on search bar

--- a/resources/style.css
+++ b/resources/style.css
@@ -1947,13 +1947,13 @@ input[type=number] {
 
 #search-categories {
     width: 100%;
-    padding: 30px 0;
+    padding: 50px 0;
 }
 
 #search-categories li {
     list-style: none;
     font-size: 1.4rem;
-    margin: 25px auto;
+    margin: 15px auto;
     width: 100%;
     text-align: center;
     padding-bottom: 10px;
@@ -1980,8 +1980,18 @@ input[type=number] {
 }
 
 .filter-options label {
+    display: inline-flex !important;
     font-size: 0.9rem;
     text-align: left;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+    margin: 0;
+}
+
+.filter-options label input[type="checkbox"] {
+    padding: 0;
+    vertical-align: middle;
 }
 
 .filter-options input {
